--- a/QA - Final/Assets/Tests/PlayModeTests/PlayModeTests.asmdef
+++ b/QA - Final/Assets/Tests/PlayModeTests/PlayModeTests.asmdef
@@ -1,23 +1,7 @@
 {
     "name": "PlayModeTests",
-    "rootNamespace": "",
-    "references": [
-        "GUID:9c7ff7471f5222a42a88bbe515aa92bf",
-        "GUID:27619889b8ba8c24980f49ee34dbb44a",
-        "GUID:0acc523941302664db1f4e527237feb3",
-        "GUID:c0dd0d10738d4ad4a9de57c559d0ca1b"
+    "optionalUnityReferences": [
+        "TestAssemblies"
     ],
-    "includePlatforms": [],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": true,
-    "precompiledReferences": [
-        "nunit.framework.dll"
-    ],
-    "autoReferenced": false,
-    "defineConstraints": [
-        "UNITY_INCLUDE_TESTS"
-    ],
-    "versionDefines": [],
-    "noEngineReferences": false
+    "references":[ "GUID:9c7ff7471f5222a42a88bbe515aa92bf" ]
 }
