--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Build, Test, and Deploy Unity Project
 on: [push, pull_request]
 
 jobs:
+  # Job to build the StandaloneWindows64 platform
   buildWindows:
     name: Build StandaloneWindows64
     runs-on: ubuntu-latest
@@ -17,9 +18,8 @@ jobs:
       - name: Cache Library folder
         uses: actions/cache@v3
         with:
-          # Cache the Library inside the project folder (has a space → quote it)
-          path: "QA - Final/Library"
-          key: Library-StandaloneWindows64-${{ hashFiles('QA - Final/Assets/**', 'QA - Final/Packages/**', 'QA - Final/ProjectSettings/**') }}
+          path: Library
+          key: Library-StandaloneWindows64-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: |
             Library-StandaloneWindows64-
             Library-
@@ -35,8 +35,9 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           unityVersion: 6000.0.43f1
-          projectPath: "QA - Final"              # <-- important
           targetPlatform: StandaloneWindows64
+          # Explicitly list the scenes to include in the build
+          scenes: "Assets/Scenes/Level1.unity,Assets/Scenes/Level2.unity"
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
@@ -44,6 +45,7 @@ jobs:
           name: Build-StandaloneWindows64
           path: build/StandaloneWindows64
 
+  # Job to run Playmode tests
   runPlaymodeTests:
     name: Run Playmode Tests
     runs-on: ubuntu-latest
@@ -58,8 +60,8 @@ jobs:
       - name: Cache Library folder
         uses: actions/cache@v3
         with:
-          path: "QA - Final/Library"
-          key: Library-PlaymodeTests-${{ hashFiles('QA - Final/Assets/**', 'QA - Final/Packages/**', 'QA - Final/ProjectSettings/**') }}
+          path: Library
+          key: Library-PlaymodeTests-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: |
             Library-PlaymodeTests-
             Library-
@@ -72,11 +74,8 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           unityVersion: 6000.0.43f1
-          projectPath: "QA - Final"              # <-- important
-          testMode: playmode                     # <-- lowercase
+          testMode: PlayMode
           artifactsPath: artifacts/TestResults/Playmode
-          # If you *do* want coverage, also add:
-          # coverageOptions: generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;dontClear
 
       - name: Upload Playmode Test Results
         uses: actions/upload-artifact@v4
@@ -84,6 +83,7 @@ jobs:
           name: Playmode-Test-Results
           path: artifacts/TestResults/Playmode
 
+  # Job to deploy the build to GitHub Releases
   deployToGitHubReleases:
     name: Deploy to GitHub Releases
     runs-on: ubuntu-latest
@@ -107,7 +107,7 @@ jobs:
           name: Release ${{ github.ref_name }}
           body: |
             New release based on tag ${{ github.ref_name }}.
-            This release includes the StandaloneWindows64 build, compressed for easier download.
+            This release includes the StandaloneWindows64 build of Level1 + Level2, compressed for easier download.
           draft: false
           prerelease: false
         env:
