--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Build, Test, and Deploy Unity Project
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   # Job to build the StandaloneWindows64 platform
@@ -36,8 +36,6 @@ jobs:
         with:
           unityVersion: 6000.0.43f1
           targetPlatform: StandaloneWindows64
-          # Explicitly list the scenes to include in the build
-          scenes: "Assets/Scenes/Level1.unity,Assets/Scenes/Level2.unity"
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
@@ -75,6 +73,7 @@ jobs:
         with:
           unityVersion: 6000.0.43f1
           testMode: PlayMode
+          # The path where test results will be generated
           artifactsPath: artifacts/TestResults/Playmode
 
       - name: Upload Playmode Test Results
@@ -82,33 +81,37 @@ jobs:
         with:
           name: Playmode-Test-Results
           path: artifacts/TestResults/Playmode
-
-  # Job to deploy the build to GitHub Releases
+      
+     # Job to deploy the build to GitHub Releases
   deployToGitHubReleases:
     name: Deploy to GitHub Releases
     runs-on: ubuntu-latest
-    needs: buildWindows
-    if: startsWith(github.ref, 'refs/tags/')
+    needs: buildWindows # This job depends on the buildWindows job completing successfully
+    if: startsWith(github.ref, 'refs/tags/') # Only run this job when a tag is pushed
 
     steps:
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
           name: Build-StandaloneWindows64
-          path: ./build/StandaloneWindows64
+          path: ./build/StandaloneWindows64 # Path where the artifact will be downloaded
 
       - name: Archive Build Folder
         run: tar -czvf build/StandaloneWindows64.tar.gz -C build/ StandaloneWindows64
+        # This command creates a gzipped tar archive of the StandaloneWindows64 folder.
+        # -C build/ changes the directory to 'build/' before archiving,
+        # ensuring 'StandaloneWindows64' is at the root of the archive.
+        # The archive will be named 'StandaloneWindows64.tar.gz' and placed in the 'build/' directory.
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v1 # Action to create a GitHub Release
         with:
-          files: build/StandaloneWindows64.tar.gz
-          name: Release ${{ github.ref_name }}
-          body: |
+          files: build/StandaloneWindows64.tar.gz # Now uploading a single compressed archive
+          name: Release ${{ github.ref_name }} # Name of the release (e.g., "Release v1.0.0")
+          body: | # Description for the release
             New release based on tag ${{ github.ref_name }}.
-            This release includes the StandaloneWindows64 build of Level1 + Level2, compressed for easier download.
-          draft: false
-          prerelease: false
+            This release includes the StandaloneWindows64 build, compressed for easier download.
+          draft: false # Set to true to create a draft release
+          prerelease: true # Set to true for a pre-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub's built-in token for authentication
