--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.searcher": "4.9.2",
     "com.unity.shadergraph": "17.0.4",
     "com.unity.test-framework": "1.4.6",
+    "com.unity.testtools.codecoverage": "1.2.6",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.5",
